--- a/server/templates/vanity.html
+++ b/server/templates/vanity.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <meta name="go-import" content="{{ .GoImportMeta }}" />
-  <meta name="go-source" content="{{ .GoSourceMeta }}" />
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="go-import" content="{{ .GoImportMeta }}">
+  <meta name="go-source" content="{{ .GoSourceMeta }}">
   <meta http-equiv="refresh" content="0; url={{ .Redirect }}">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="noindex,follow">
@@ -11,7 +11,7 @@
   <title>Rotational Go Packages</title>
 
   <link rel="icon" type="image/ico" href="/static/img/favicon.ico">
-  <link rel="stylesheet" href="/static/css/style.css" />
+  <link rel="stylesheet" href="/static/css/style.css">
 </head>
 <body>
   <header >
